[gd_scene load_steps=15 format=3 uid="uid://dpbhin2ysth76"]

[ext_resource type="Script" path="res://addons/level_block/level_block_node.gd" id="1_hsvdt"]
[ext_resource type="Material" uid="uid://c71yladfjhgud" path="res://addons/level_block/default_material.tres" id="2_h16m8"]
[ext_resource type="Texture2D" uid="uid://dpccdpj80v5f7" path="res://Assets/tileset.png" id="3_6vnx0"]
[ext_resource type="PackedScene" uid="uid://lg7tjjb1wgro" path="res://Assets/Environment/Levels/Entity/Player/player.tscn" id="4_f4mmq"]
[ext_resource type="Environment" uid="uid://bkpykxn5phf6i" path="res://Assets/Environment/Dungeon_Environment.tres" id="5_sb2dq"]
[ext_resource type="PackedScene" uid="uid://bob7138tsw51p" path="res://Assets/Environment/Levels/Entity/Enemy/enemy.tscn" id="6_sr0mh"]
[ext_resource type="Script" path="res://Scripts/gui.gd" id="7_f7m8l"]
[ext_resource type="Theme" uid="uid://cb3q5whikh2y3" path="res://Assets/GUI_Theeme.tres" id="8_26clg"]
[ext_resource type="PackedScene" uid="uid://u50dra05nd77" path="res://Assets/key.tscn" id="9_hb1qy"]
[ext_resource type="AudioStream" uid="uid://0g0sw0hgjkho" path="res://Assets/Sound/Music/Song1.mp3" id="11_gf0do"]
[ext_resource type="AudioStream" uid="uid://c5vk42v2rhyxu" path="res://Assets/Sound/Music/Song2.mp3" id="12_o7jfj"]
[ext_resource type="AudioStream" uid="uid://bdbhs1lycobev" path="res://Assets/Sound/Music/Song3.mp3" id="13_ln323"]
[ext_resource type="PackedScene" uid="uid://b8wq7qu5hlk0k" path="res://Assets/Magic/magic.tscn" id="13_yk2dw"]

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_wf1vy"]
shuffle = true
stream_count = 3
stream_0 = ExtResource("11_gf0do")
stream_1 = ExtResource("12_o7jfj")
stream_2 = ExtResource("13_ln323")

[node name="Level1" type="Node3D"]

[node name="Blocks" type="Node3D" parent="."]

[node name="LevelBlock" type="Node3D" parent="Blocks"]
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 2
south_face = 1
west_face = 3
top_face = 5
bottom_face = 4

[node name="LevelBlock2" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
top_face = 5
bottom_face = 4

[node name="LevelBlock6" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
south_face = 0
west_face = 0
top_face = 5
bottom_face = 4

[node name="LevelBlock7" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 2)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
south_face = 6
top_face = 5
bottom_face = 4

[node name="OmniLight3D" type="OmniLight3D" parent="Blocks/LevelBlock7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0.9)
light_color = Color(1, 0.945098, 0.713726, 1)

[node name="LevelBlock8" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 2)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
east_face = 0
south_face = 0
top_face = 5
bottom_face = 4

[node name="LevelBlock9" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -2)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 0
west_face = 0
top_face = 5
bottom_face = 4

[node name="LevelBlock10" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -2)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 6
top_face = 5
bottom_face = 4

[node name="OmniLight3D" type="OmniLight3D" parent="Blocks/LevelBlock10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, -0.9)
light_color = Color(1, 0.945098, 0.713726, 1)

[node name="LevelBlock11" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -2)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 0
east_face = 0
top_face = 5
bottom_face = 4

[node name="LevelBlock3" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
top_face = 5
bottom_face = 4

[node name="LevelBlock4" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
top_face = 5
bottom_face = 4

[node name="LevelBlock5" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 0
south_face = 0
top_face = 5
bottom_face = 14

[node name="LevelBlock12" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 12
south_face = 11
top_face = 12
bottom_face = 12

[node name="LevelBlock13" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 10
south_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock14" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 0)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 10
south_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock15" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 0)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock17" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 2)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
east_face = 10
west_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock18" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 4)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
top_face = 10
bottom_face = 10

[node name="LevelBlock19" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, 4)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 10
east_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock20" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, 10)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
east_face = 10
south_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock29" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 10)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
south_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock35" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 10)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
south_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock22" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 10)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
south_face = 10
west_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock23" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 4)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock24" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 4)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 10
west_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock16" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, 0)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
north_face = 10
east_face = 13
south_face = 10
top_face = 10
bottom_face = 10

[node name="OmniLight3D" type="OmniLight3D" parent="Blocks/LevelBlock16"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.9, 0.1, 0)
light_color = Color(1, 0.945098, 0.713726, 1)

[node name="LevelBlock25" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 8)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
west_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock26" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 8)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
top_face = 10
bottom_face = 10

[node name="LevelBlock30" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 6)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
top_face = 10
bottom_face = 10

[node name="LevelBlock32" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, 6)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
east_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock33" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 6)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
top_face = 10
bottom_face = 10

[node name="LevelBlock31" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 6)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
west_face = 10
top_face = 10
bottom_face = 10

[node name="LevelBlock27" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 8)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
top_face = 10
bottom_face = 10

[node name="LevelBlock28" type="Node3D" parent="Blocks"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, 8)
script = ExtResource("1_hsvdt")
material = ExtResource("2_h16m8")
texture_sheet = ExtResource("3_6vnx0")
east_face = 10
top_face = 10
bottom_face = 10

[node name="Player" parent="." instance=ExtResource("4_f4mmq")]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Player"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
stream = SubResource("AudioStreamPlaylist_wf1vy")
autoplay = true

[node name="Key" parent="." instance=ExtResource("9_hb1qy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, 8)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5_sb2dq")

[node name="Enemies" type="Node" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("6_sr0mh")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6, 0, 0)
target = NodePath("../../Player")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_26clg")
script = ExtResource("7_f7m8l")
target = NodePath("../Player")

[node name="CanvasLayer" type="CanvasLayer" parent="GUI"]

[node name="StepLabel" type="Label" parent="GUI/CanvasLayer"]
z_index = 1
anchors_preset = -1
anchor_right = 0.049
anchor_bottom = 0.035
offset_right = -0.448002
offset_bottom = 0.32
theme = ExtResource("8_26clg")
text = "Steps:1"

[node name="KeyLabel" type="Label" parent="GUI/CanvasLayer"]
z_index = 1
anchors_preset = -1
anchor_top = 0.039
anchor_right = 0.095
anchor_bottom = 0.074
offset_top = -0.272001
offset_right = -53.44
offset_bottom = 0.0480003
theme = ExtResource("8_26clg")
text = "Has Key: False"

[node name="Bars" type="Node" parent="GUI/CanvasLayer"]

[node name="Bar" type="ColorRect" parent="GUI/CanvasLayer/Bars"]
modulate = Color(1, 1, 1, 0.6)
z_index = -1
anchors_preset = -1
anchor_top = -0.031
anchor_right = 0.191
anchor_bottom = 1.012
offset_top = 0.0880013
offset_right = -0.0320129
offset_bottom = 0.223938
color = Color(0, 0, 0, 1)

[node name="Bar3" type="ColorRect" parent="GUI/CanvasLayer/Bars"]
modulate = Color(1, 1, 1, 0.6)
z_index = -1
anchors_preset = -1
anchor_left = 0.191
anchor_top = 0.728
anchor_right = 0.809
anchor_bottom = 1.012
offset_left = -0.0320129
offset_top = 0.255981
offset_right = 0.0319824
offset_bottom = 0.223938
color = Color(0, 0, 0, 1)

[node name="Bar2" type="ColorRect" parent="GUI/CanvasLayer/Bars"]
modulate = Color(1, 1, 1, 0.6)
z_index = -1
anchors_preset = -1
anchor_left = 0.809
anchor_top = -0.031
anchor_right = 1.0
anchor_bottom = 1.012
offset_left = 0.0319824
offset_top = 0.0880013
offset_bottom = 0.223938
color = Color(0, 0, 0, 1)

[node name="Map" type="SubViewportContainer" parent="GUI/CanvasLayer"]
z_index = -2
anchors_preset = -1
anchor_left = 0.809
anchor_right = 1.0
anchor_bottom = 0.34
offset_left = 0.0319824
offset_bottom = -0.320007

[node name="SubViewport" type="SubViewport" parent="GUI/CanvasLayer/Map"]
handle_input_locally = false
size = Vector2i(220, 220)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="GUI/CanvasLayer/Map/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0)
projection = 1
size = 20.0

[node name="MathInput" type="LineEdit" parent="GUI/CanvasLayer"]
z_index = 1
anchors_preset = -1
anchor_left = 0.245
anchor_top = 0.79
anchor_right = 0.755
anchor_bottom = 0.852
offset_left = -0.23999
offset_top = 0.0799866
offset_right = 0.239929
offset_bottom = -0.0960083
theme = ExtResource("8_26clg")
placeholder_text = "Enter  Answer"
alignment = 1
max_length = 5
clear_button_enabled = true
caret_blink = true

[node name="Defend" type="Button" parent="GUI/CanvasLayer"]
z_index = 1
anchors_preset = -1
anchor_left = 0.181
anchor_top = 0.778
anchor_right = 0.224
anchor_bottom = 0.855
offset_left = -0.512009
offset_top = -0.144043
offset_right = -0.0480042
offset_bottom = -0.0400391
action_mode = 0

[node name="Attack" type="Button" parent="GUI/CanvasLayer"]
z_index = 1
anchors_preset = -1
anchor_left = 0.778
anchor_top = 0.778
anchor_right = 0.821
anchor_bottom = 0.855
offset_left = -0.256042
offset_top = -0.144043
offset_right = 0.207947
offset_bottom = -0.0400391
action_mode = 0

[node name="HealthBar" type="ProgressBar" parent="GUI/CanvasLayer"]
z_index = -1
anchors_preset = -1
anchor_left = 0.275
anchor_top = 0.856
anchor_right = 0.725
anchor_bottom = 0.898
offset_left = 0.199982
offset_top = 0.311951
offset_right = -0.200012
offset_bottom = 0.0959473
theme = ExtResource("8_26clg")
value = 100.0

[node name="MathContainer" type="ColorRect" parent="GUI/CanvasLayer"]
modulate = Color(1, 1, 1, 0.6)
z_index = -1
anchors_preset = -1
anchor_left = 0.191
anchor_top = 0.657
anchor_right = 0.809
anchor_bottom = 0.728
offset_left = -0.0320129
offset_top = 0.264008
offset_right = 0.0319824
offset_bottom = 0.255981
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="GUI/CanvasLayer/MathContainer"]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_26clg")
text = "Question"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Magic" parent="." instance=ExtResource("13_yk2dw")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 2, -2, 0)

[connection signal="text_changed" from="GUI/CanvasLayer/MathInput" to="GUI" method="_on_math_input_text_changed"]
[connection signal="pressed" from="GUI/CanvasLayer/Defend" to="GUI" method="_on_defend_pressed"]
[connection signal="pressed" from="GUI/CanvasLayer/Attack" to="GUI" method="_on_attack_pressed"]
